Created minimal installation script.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: generic
+sudo: required
 dist: trusty
 
 env:
@@ -6,18 +7,13 @@ env:
   - ROS_DISTRO=jade
 
 before_install:
-  - sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu trusty main" > /etc/apt/sources.list.d/ros-latest.list'
-  - wget -q http://packages.ros.org/ros.key -O - | sudo apt-key add -
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq python-rosdep
-  - sudo rosdep init
-  - rosdep update
-  - rosdep install -i --from-paths ./
+  - ./minimal
 
 install: true
 
 script:
   - source /opt/ros/$ROS_DISTRO/setup.bash
+  - which check_urdf
 
 notifications:
   email: false
