--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ env:
   - ROS_DISTRO=jade
 
 install:
-  - ./install-max-ros
+  - ./ros-install-max
+  - ./ceres-install
 
 script:
   - source ~/.bashrc
