--- a/riptide_description/package.xml
+++ b/riptide_description/package.xml
@@ -14,9 +14,10 @@
   <author email="cary.42@osu.edu">Conor Cary</author>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>liburdfdom-tools</build_depend>
-  <build_depend>urdf</build_depend>
-  <build_depend>xacro</build_depend>
+
+  <run_depend>liburdfdom-tools</run_depend>
+  <run_depend>urdf</run_depend>
+  <run_depend>xacro</run_depend>
 
   <export>
   </export>
