--- a/riptide_pid/package.xml
+++ b/riptide_pid/package.xml
@@ -1,58 +1,25 @@
 <?xml version="1.0"?>
 <package>
   <name>riptide_pid</name>
-  <version>0.0.0</version>
+  <version>0.0.1</version>
   <description>The riptide_pid package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
-  <!-- Example:  -->
-  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="sara@todo.todo">sara</maintainer>
+  <maintainer email="mahaffey.60@osu.edu">Sara Mahaffey</maintainer>
 
+  <license>BSD</license>
 
-  <!-- One license tag required, multiple allowed, one license per tag -->
-  <!-- Commonly used license strings: -->
-  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <url type="website">http://go.osu.edu/uwrt</url>
+  <url type="repository">http://github.com/osu-uwrt/riptide_pid</url>
 
+  <author email="mahaffey.60@osu.edu">Sara Mahaffey</author>
 
-  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
-  <!-- Optional attribute type can be: website, bugtracker, or repository -->
-  <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/pid_control</url> -->
-
-
-  <!-- Author tags are optional, mutiple are allowed, one per tag -->
-  <!-- Authors do not have to be maintianers, but could be -->
-  <!-- Example: -->
-  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
-
-
-  <!-- The *_depend tags are used to specify dependencies -->
-  <!-- Dependencies can be catkin packages or system dependencies -->
-  <!-- Examples: -->
-  <!-- Use build_depend for packages you need at compile time: -->
-  <!--   <build_depend>message_generation</build_depend> -->
-  <!-- Use buildtool_depend for build tool packages: -->
-  <!--   <buildtool_depend>catkin</buildtool_depend> -->
-  <!-- Use run_depend for packages you need at runtime: -->
-  <!--   <run_depend>message_runtime</run_depend> -->
-  <!-- Use test_depend for packages you need only for testing: -->
-  <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+
   <build_depend>control_toolbox</build_depend>
-  <build_depend>jaws2_imu</build_depend>
-  <build_depend>jaws2_joy</build_depend>
+
   <run_depend>control_toolbox</run_depend>
-  <run_depend>jaws2_imu</run_depend>
-  <run_depend>jaws2_joy</run_depend>
   <run_depend>dynamic_reconfigure</run_depend>
 
-
-
-  <!-- The export tag contains other, unspecified, tags -->
   <export>
-    <!-- Other tools can request additional information be placed here -->
-
   </export>
 </package>
