--- a/riptide_hardware/package.xml
+++ b/riptide_hardware/package.xml
@@ -1,25 +1,32 @@
 <?xml version="1.0"?>
 <package>
   <name>riptide_hardware</name>
-  <version>0.2.0</version>
-  <description>Hardware abstraction layer for Jaws 2.</description>
+  <version>0.0.1</version>
+  <description>Hardware abstraction layer for Riptide.</description>
 
   <maintainer email="cary.42@osu.edu">Conor Cary</maintainer>
 
   <license>BSD</license>
 
   <url type="website">http://go.osu.edu/uwrt</url>
-  <url type="website">http://github.com/uwrt-osu/jaws-arbotix</url>
+  <url type="repository">http://github.com/uwrt-osu/riptide_hardware</url>
 
   <author email="cary.42@osu.edu">Conor Cary</author>
   <author email="edin.3@osu.edu">Peter Edin</author>
   <author email="fletcher.236@osu.edu">Charles Fletcher</author>
+  <author email="mahaffey.60@osu.edu">Sara Mahaffey</author>
 
   <buildtool_depend>catkin</buildtool_depend>
+
   <build_depend>roscpp</build_depend>
-  <build_depend>jaws_msgs</build_depend>
+  <build_depend>message_filters</build_depend>
+  <build_depend>riptide_msgs</build_depend>
+  <build_depend>libboost-all-dev</build_depend>
+
   <run_depend>roscpp</run_depend>
-  <run_depend>jaws_msgs</run_depend>
+  <run_depend>message_filters</run_depend>
+  <run_depend>riptide_msgs</run_depend>
+  <run_depend>libboost-all-dev</run_depend>
 
   <export>
   </export>
