--- a/riptide_hardware/CMakeLists.txt
+++ b/riptide_hardware/CMakeLists.txt
@@ -11,6 +11,10 @@ add_executable(thrust_cal src/thrust_cal.cpp)
 add_executable(serial_port src/serial_port.cpp)
 #add_executable(serial_port2 src/serial_port2.cpp)
 
+add_dependencies(thrust_cal riptide_msgs_gencpp)
+add_dependencies(serial_port riptide_msgs_gencpp)
+#add_dependencies(serial_port2 riptide_msgs_gencpp)
+
 target_link_libraries(thrust_cal ${catkin_LIBRARIES})
 target_link_libraries(serial_port ${catkin_LIBRARIES})
 #target_link_libraries(serial_port2 ${catkin_LIBRARIES})
