--- a/riptide_hardware/package.xml
+++ b/riptide_hardware/package.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0"?>
 <package>
   <name>riptide_hardware</name>
-  <version>0.0.1</version>
-  <description>Hardware abstraction layer for Riptide.</description>
+  <version>0.0.2</version>
+  <description>Hardware abstraction layer for OSU's Riptide AUV.</description>
 
   <maintainer email="cary.42@osu.edu">Conor Cary</maintainer>
 
   <license>BSD</license>
 
   <url type="website">http://go.osu.edu/uwrt</url>
-  <url type="repository">http://github.com/uwrt-osu/riptide_hardware</url>
+  <url type="repository">http://github.com/uwrt-osu/riptide</url>
 
   <author email="cary.42@osu.edu">Conor Cary</author>
   <author email="edin.3@osu.edu">Peter Edin</author>
