--- a/riptide_msgs/package.xml
+++ b/riptide_msgs/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
   <name>riptide_msgs</name>
-  <version>0.0.1</version>
-  <description>Custom messages for Riptide.</description>
+  <version>0.0.2</version>
+  <description>Custom messages for OSU's Riptide AUV.</description>
 
   <maintainer email="cary.42@osu.edu">Conor Cary</maintainer>
 
