--- a/riptide_solver/package.xml
+++ b/riptide_solver/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package>
   <name>riptide_solver</name>
-  <version>0.0.2</version>
+  <version>0.0.3</version>
   <description>Thruster solver for OSU's Riptide AUV.</description>
 
   <maintainer email="justice.251@osu.edu">Benji Justice</maintainer>
@@ -17,13 +17,13 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>roscpp</build_depend>
-  <build_depend>ceres-solver</build_depend>
+  <build_depend>libceres-dev</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>riptide_msgs</build_depend>
 
   <run_depend>roscpp</run_depend>
-  <run_depend>ceres-solver</run_depend>
+  <run_depend>libceres-dev</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>riptide_msgs</run_depend>
