--- a/riptide_msgs/CMakeLists.txt
+++ b/riptide_msgs/CMakeLists.txt
@@ -1,28 +1,12 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(riptide_msgs)
 
-find_package(catkin REQUIRED COMPONENTS
-  message_generation
-  std_msgs
-)
+find_package(catkin REQUIRED COMPONENTS message_generation std_msgs)
 
-add_message_files(
-  FILES
-  Thrust.msg
-  ThrustStamped.msg
-  Pwm.msg
-  PwmStamped.msg
-)
+add_message_files(FILES Thrust.msg ThrustStamped.msg Pwm.msg PwmStamped.msg)
 
-generate_messages(
-  DEPENDENCIES
-  std_msgs
-)
+generate_messages(DEPENDENCIES std_msgs)
 
-catkin_package(
-  CATKIN_DEPENDS message_runtime
-)
+catkin_package(CATKIN_DEPENDS message_runtime)
 
-include_directories(
-  ${catkin_INCLUDE_DIRS}
-)
+include_directories(${catkin_INCLUDE_DIRS})
