--- a/riptide_navigation/cfg/pid.cfg
+++ b/riptide_navigation/cfg/pid.cfg
@@ -1,5 +1,5 @@
 #!/usr/bin/env python
-PACKAGE = "riptide_pid"
+PACKAGE = "riptide_navigation"
 
 from dynamic_reconfigure.parameter_generator_catkin import *
 
@@ -12,4 +12,4 @@ gen.add("im",   double_t,   0, "i_max parameter",  .3, 0, 1)
 gen.add("dm", double_t, 0, "d_max parameter",    -.3, -1, 0)
 
 
-exit(gen.generate(PACKAGE, "riptide_pid", "pid_orient"))
+exit(gen.generate(PACKAGE, "riptide_navigation", "pid"))
