--- a/riptide_description/CMakeLists.txt
+++ b/riptide_description/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(riptide_description)
 
-find_package(catkin REQUIRED COMPONENTS xacro)
+find_package(catkin REQUIRED COMPONENTS urdf xacro)
 
 catkin_package()
