--- a/riptide_navigation/package.xml
+++ b/riptide_navigation/package.xml
@@ -12,12 +12,20 @@
   <url type="repository">http://github.com/uwrt-osu/riptide_msgs</url>
 
   <author email="cary.42@osu.edu">Conor Cary</author>
+  <author email="mahaffey.60@osu.edu">Sara Mahaffey</author>
+  <author email="justice.251@osu.edu">Benji Justice</author>
 
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>control_toolbox</build_depend>
+  <build_depend>riptide_msgs</build_depend>
+  <build_depend>sensor_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
 
   <run_depend>control_toolbox</run_depend>
+  <run_depend>riptide_msgs</run_depend>
+  <run_depend>sensor_msgs</run_depend>
+  <run_depend>geometry_msgs</run_depend>
 
   <export>
   </export>
