--- a/riptide_serial/package.xml
+++ b/riptide_serial/package.xml
@@ -12,11 +12,18 @@
   <url type="repository">http://github.com/uwrt-osu/riptide_msgs</url>
 
   <author email="cary.42@osu.edu">Conor Cary</author>
+  <author email="edin.3@osu.edu">Peter Edin</author>
+  <author email="fletcher.236@osu.edu">Charles Fletcher</author>
+  <author email="mahaffey.60@osu.edu">Sara Mahaffey</author>
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend>message_filters</build_depend>
+  <build_depend>riptide_msgs</build_depend>
   <build_depend>libboost-all-dev</build_depend>
 
+  <run_depend>message_filters</run_depend>
+  <run_depend>riptide_msgs</run_depend>
   <run_depend>libboost-all-dev</run_depend>
 
   <export>
