--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - pip install --user travis-sphinx
   - export PATH=$HOME/.local/bin:$PATH
 script:
-  - travis-sphinx --source=docs build
+  - travis-sphinx -n -s=docs build
 after_success:
 - if [ "$TRAVIS_PULL_REQUEST" == false ]; then travis-sphinx deploy; fi
 notifications:
