--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   - sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -cs) main" > /etc/apt/sources.list.d/ros-latest.list'
   - wget http://packages.ros.org/ros.key -O - | sudo apt-key add -
   - sudo apt-get update
-  - sudo apt-get python-rosdep
+  - sudo apt-get install python-rosdep
   - sudo rosdep init
   - rosdep update
   - sudo apt-get install ros-"$ROS_DISTRO"-desktop-full
