--- a/riptide_serial/package.xml
+++ b/riptide_serial/package.xml
@@ -20,11 +20,11 @@
 
   <build_depend>message_filters</build_depend>
   <build_depend>riptide_msgs</build_depend>
-  <build_depend>libboost-all-dev</build_depend>
+  <build_depend>boost</build_depend>
 
   <run_depend>message_filters</run_depend>
   <run_depend>riptide_msgs</run_depend>
-  <run_depend>libboost-all-dev</run_depend>
+  <run_depend>boost</run_depend>
 
   <export>
   </export>
