Updates for accel set pt from joystick for initial testing
Conflicts:
	riptide_navigation/CMakeLists.txt~

--- a/riptide_navigation/CMakeLists.txt
+++ b/riptide_navigation/CMakeLists.txt
@@ -19,6 +19,7 @@ add_executable(thrust_solver src/thrust_solver.cpp)
 add_executable(fake_data src/fake_data.cpp)
 add_executable(fake_imu src/fake_imu.cpp)
 add_executable(pid_linear src/pid_linear.cpp)
+add_executable(joy_accel_set src/accel_set.cpp)
 #add_executable(pid_roll src/pid_roll.cpp)
 
 add_dependencies(thrust_cal riptide_msgs_gencpp)
@@ -33,4 +34,5 @@ target_link_libraries(thrust_solver ${catkin_LIBRARIES} ${CERES_LIBRARIES})
 target_link_libraries(fake_data ${catkin_LIBRARIES})
 target_link_libraries(fake_imu  ${catkin_LIBRARIES})
 target_link_libraries(pid_linear ${catkin_LIBRARIES})
+target_link_libraries(joy_accel_set ${catkin_LIBRARIES})
 #target_link_libraries(pid_roll ${catkin_LIBRARIES})
