Updated pid set points and thrust cal
Conflicts:
	riptide_navigation/src/accel_set.cpp~
	riptide_navigation/src/pid_linear.cpp~
	riptide_navigation/src/pid_pitch.cpp~
	riptide_navigation/src/pid_roll.cpp~
	riptide_navigation/src/pid_yaw.cpp~

--- a/riptide_navigation/cfg/pid.cfg
+++ b/riptide_navigation/cfg/pid.cfg
@@ -10,6 +10,10 @@ gen.add("i", double_t, 0, "Intergral param",    .5, 0, 20)
 gen.add("d",    double_t,    0, "Derivative param", 2 , 0, 20)
 gen.add("im",   double_t,   0, "i_max parameter",  .3, 0, 1)
 gen.add("dm", double_t, 0, "d_max parameter",    -.3, -1, 0)
+gen.add("g", double_t,0, "gravitational_accel", -9.8, -10,-9)
+gen.add("mag_x", double_t,0,"zeroed x mag field",0, -1,1)
+gen.add("mag_y", double_t,0,"zeroed y mag field",0, -1,1)
+gen.add("mag_z", double_t,0,"zeroed z mag field",0, -1,1)
 
 
 exit(gen.generate(PACKAGE, "riptide_navigation", "pid"))
