--- a/riptide_navigation/cfg/pid_orient.cfg
+++ b/riptide_navigation/cfg/pid_orient.cfg
@@ -10,10 +10,6 @@ gen.add("i", double_t, 0, "Intergral param",    .5, 0, 20)
 gen.add("d",    double_t,    0, "Derivative param", 2 , 0, 20)
 gen.add("im",   double_t,   0, "i_max parameter",  .3, 0, 1)
 gen.add("dm", double_t, 0, "d_max parameter",    -.3, -1, 0)
-gen.add("g", double_t,0, "gravitational_accel", -9.81, 9,10)
-gen.add("mag_x", double_t,0,"zeroed x mag field",.1, -.5,.5)
-gen.add("mag_y", double_t,0,"zeroed y mag field",.1, -.5,.5)
-gen.add("mag_z", double_t,0,"zeroed z mag field",.1, -.5,.5)
 
 
-exit(gen.generate(PACKAGE, "riptide_navigation", "pid"))
+exit(gen.generate(PACKAGE, "riptide_navigation", "pid_orient"))
