--- a/riptide_msgs/package.xml
+++ b/riptide_msgs/package.xml
@@ -2,7 +2,7 @@
 <package>
   <name>riptide_msgs</name>
   <version>0.0.4</version>
-  <description>Custom messages for OSU's Riptide AUV.</description>
+  <description>Custom messages, actions, and services for OSU's Riptide AUV.</description>
 
   <maintainer email="cary.42@osu.edu">Conor Cary</maintainer>
 
@@ -16,8 +16,12 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>message_generation</build_depend>
+  <build_depend>actionlib_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
 
   <run_depend>message_runtime</run_depend>
+  <run_depend>actionlib_msgs</run_depend>
+  <run_depend>geometry_msgs</run_depend>
 
   <export>
   </export>
