--- a/riptide_description/package.xml
+++ b/riptide_description/package.xml
@@ -15,7 +15,10 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <run_depend>liburdfdom-tools</run_depend>
+  <build_depend>liburdfdom-tools</build_depend>
+  <build_depend>urdf</build_depend>
+  <build_depend>xacro</build_depend>
+
   <run_depend>urdf</run_depend>
   <run_depend>xacro</run_depend>
 
