Updated sphinx_rtd_theme install for Sphinx version 1.4+.

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ install:
 
 before_script:
   - pip install -q --user travis-sphinx
+  - pip install sphinx_rtd_theme
 
 script:
   - ./scripts/setup-workspace
