--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
 
 before_script:
   - pip install -q --user travis-sphinx
-  - pip install sphinx_rtd_theme
+  - pip install -q --user sphinx_rtd_theme
 
 script:
   - ./scripts/setup-workspace
