--- a/riptide_navigation/cfg/pid.cfg
+++ b/riptide_navigation/cfg/pid.cfg
@@ -5,15 +5,22 @@ from dynamic_reconfigure.parameter_generator_catkin import *
 
 gen = ParameterGenerator()
 
-gen.add("p",    double_t,    0, "Proportional param", 3,  0, 20)
-gen.add("i", double_t, 0, "Intergral param",    .5, 0, 20)
-gen.add("d",    double_t,    0, "Derivative param", 2 , 0, 20)
-gen.add("im",   double_t,   0, "i_max parameter",  .3, 0, 1)
-gen.add("dm", double_t, 0, "d_max parameter",    -.3, -1, 0)
-gen.add("g", double_t,0, "gravitational_accel", -9.8, -10,-9)
-gen.add("mag_x", double_t,0,"zeroed x mag field",0, -1,1)
-gen.add("mag_y", double_t,0,"zeroed y mag field",0, -1,1)
-gen.add("mag_z", double_t,0,"zeroed z mag field",0, -1,1)
+gen.add("px",    double_t,    0, "Proportional param1", 1,  0, 20)
+gen.add("ix", double_t, 0, "Intergral param1",    1, 0, 20)
+gen.add("dx",    double_t,    0, "Derivative param1", 1 , 0, 20)
+gen.add("imx",   double_t,   0, "i_max parameter1", .3, 0, 1)
+gen.add("dmx", double_t, 0, "d_max parameter1",    -.3, -1, 0)
+gen.add("py",    double_t,    0, "Proportional param2", 1,  0, 20)
+gen.add("iy", double_t, 0, "Intergral param2",    1, 0, 20)
+gen.add("dy",    double_t,    0, "Derivative param2", 1 , 0, 20)
+gen.add("imy",   double_t,   0, "i_max parameter2",  .3, 0, 1)
+gen.add("dmy", double_t, 0, "d_max parameter2",    -.3, -1, 0)
+gen.add("pz",    double_t,    0, "Proportional param3", 1,  0, 20)
+gen.add("iz", double_t, 0, "Intergral param3",    1, 0, 20)
+gen.add("dz",    double_t,    0, "Derivative param3", 1 , 0, 20)
+gen.add("imz",   double_t,   0, "i_max parameter3",  .3, 0, 1)
+gen.add("dmz", double_t, 0, "d_max parameter3",    -.3, -1, 0)
+
 
 
 exit(gen.generate(PACKAGE, "riptide_navigation", "pid"))
