--- a/riptide_serial/package.xml
+++ b/riptide_serial/package.xml
@@ -18,13 +18,13 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>message_filters</build_depend>
+  <build_depend>rosserial_python</build_depend>
+  <build_depend>rosserial_arduino</build_depend>
   <build_depend>riptide_msgs</build_depend>
-  <build_depend>boost</build_depend>
 
-  <run_depend>message_filters</run_depend>
+  <run_depend>rosserial_python</run_depend>
+  <run_depend>rosserial_arduino</run_depend>
   <run_depend>riptide_msgs</run_depend>
-  <run_depend>boost</run_depend>
 
   <export>
   </export>
