Move thrust calibration from navigation to hardware.

--- a/riptide_hardware/CMakeLists.txt
+++ b/riptide_hardware/CMakeLists.txt
@@ -6,3 +6,7 @@ find_package(catkin REQUIRED COMPONENTS riptide_msgs)
 catkin_package()
 
 include_directories(${catkin_INCLUDE_DIRS})
+
+add_executable(thrust_cal src/thrust_cal.cpp)
+add_dependencies(thrust_cal riptide_msgs_gencpp)
+target_link_libraries(thrust_cal ${catkin_LIBRARIES})
