--- a/riptide_hardware/CMakeLists.txt
+++ b/riptide_hardware/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(riptide_hardware)
 
-find_package(catkin REQUIRED COMPONENTS riptide_msgs)
+find_package(catkin REQUIRED COMPONENTS roscpp riptide_msgs)
 
 catkin_package()
 
