--- a/riptide_teleop/CMakeLists.txt
+++ b/riptide_teleop/CMakeLists.txt
@@ -6,3 +6,9 @@ find_package(catkin REQUIRED COMPONENTS joy roslaunch)
 catkin_package()
 
 include_directories(${catkin_INCLUDE_DIRS})
+
+add_executable(accel_cmdr src/accel_cmd.cpp)
+target_link_libraries(accel_cmdr ${catkin_LIBRARIES})
+
+add_executable(joy_accel_set src/accel_set.cpp)
+target_link_libraries(joy_accel_set ${catkin_LIBRARIES})
