--- a/riptide_estimation/CMakeLists.txt
+++ b/riptide_estimation/CMakeLists.txt
@@ -10,3 +10,6 @@ include_directories(${catkin_INCLUDE_DIRS})
 add_executable(imu_transform src/imu_transform.cpp)
 add_dependencies(imu_transform imu_3dm_gx4_gencpp)
 target_link_libraries(imu_transform ${catkin_LIBRARIES})
+
+add_executable(imu_orientation src/imu_orientation.cpp)
+target_link_libraries(imu_orientation ${catkin_LIBRARIES})
