--- a/riptide_navigation/CMakeLists.txt
+++ b/riptide_navigation/CMakeLists.txt
@@ -14,8 +14,9 @@ add_executable(attitude_controller src/attitude.cpp)
 target_link_libraries(attitude_controller ${catkin_LIBRARIES})
 add_dependencies(attitude_controller imu_3dm_gx4_gencpp)
 
-#add_executable(position_controller src/position_controller.cpp)
-#target_link_libraries(position_controller ${catkin_LIBRARIES})
+add_executable(position_controller src/position.cpp)
+target_link_libraries(position_controller ${catkin_LIBRARIES})
+add_dependencies(position_controller riptide_msgs_gencpp)
 
 add_executable(thruster_controller src/thruster_controller.cpp)
 target_link_libraries(thruster_controller ${catkin_LIBRARIES} ${CERES_LIBRARIES})
