--- a/riptide_msgs/CMakeLists.txt
+++ b/riptide_msgs/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(riptide_msgs)
 
-find_package(catkin REQUIRED COMPONENTS message_generation std_msgs)
+find_package(catkin REQUIRED COMPONENTS message_generation std_msgs geometry_msgs)
 
-add_message_files(FILES Depth.msg Thrust.msg ThrustStamped.msg Pwm.msg PwmStamped.msg Esc.msg Thrusters.msg Bat.msg BatStamped.msg)
+add_message_files(FILES Depth.msg Thrust.msg ThrustStamped.msg Pwm.msg PwmStamped.msg Esc.msg Thrusters.msg Bat.msg BatStamped.msg OdomWithAccel.msg)
 
-generate_messages(DEPENDENCIES std_msgs)
+generate_messages(DEPENDENCIES std_msgs geometry_msgs)
 
 catkin_package(CATKIN_DEPENDS message_runtime)
 
