--- a/riptide_navigation/CMakeLists.txt
+++ b/riptide_navigation/CMakeLists.txt
@@ -12,7 +12,7 @@ include_directories(${catkin_INCLUDE_DIRS} ${CERES_INCLUDE_DIRS})
 
 add_executable(attitude_controller src/attitude_controller.cpp)
 target_link_libraries(attitude_controller ${catkin_LIBRARIES})
-add_dependencies(attitude_controller imu_3dm_gx4_gencpp)
+add_dependencies(attitude_controller riptide_msgs_gencpp imu_3dm_gx4_gencpp)
 
 add_executable(position_controller src/position_controller.cpp)
 target_link_libraries(position_controller ${catkin_LIBRARIES})
@@ -20,4 +20,4 @@ add_dependencies(position_controller riptide_msgs_gencpp)
 
 add_executable(thruster_controller src/thruster_controller.cpp)
 target_link_libraries(thruster_controller ${catkin_LIBRARIES} ${CERES_LIBRARIES})
-add_dependencies(thruster_controller imu_3dm_gx4_gencpp riptide_msgs_gencpp)
+add_dependencies(thruster_controller riptide_msgs_gencpp imu_3dm_gx4_gencpp)
