Added action templates.

--- a/riptide_autonomy/CMakeLists.txt
+++ b/riptide_autonomy/CMakeLists.txt
@@ -6,9 +6,9 @@ find_package(Boost REQUIRED COMPONENTS system)
 
 catkin_package()
 
-add_executable(navigate_action_server src/navigate_action_server.cpp)
+add_executable(action_server_template src/action_server_template.cpp)
 
-target_link_libraries(navigate_action_server ${catkin_LIBRARIES})
+target_link_libraries(action_server_template ${catkin_LIBRARIES})
 
 include_directories(${catkin_INCLUDE_DIRS})
 
