--- a/riptide_autonomy/package.xml
+++ b/riptide_autonomy/package.xml
@@ -17,7 +17,11 @@
 
   <build_depend>smach_ros</build_depend>
 
+  <build_depend>riptide_msgs</build_depend>
+
   <run_depend>smach_ros</run_depend>
+
+  <run_depend>riptide_msgs</run_depend>
 
   <export>
   </export>
