--- a/riptide_controls/CMakeLists.txt
+++ b/riptide_controls/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(riptide_navigation)
+project(riptide_controls)
 
 find_package(catkin REQUIRED COMPONENTS
   tf control_toolbox geometry_msgs nav_msgs sensor_msgs riptide_msgs imu_3dm_gx4
