--- a/riptide_robot/package.xml
+++ b/riptide_robot/package.xml
@@ -21,7 +21,7 @@
   <run_depend>riptide_gazebo</run_depend>
   <run_depend>riptide_launch</run_depend>
   <run_depend>riptide_msgs</run_depend>
-  <run_depend>riptide_navigation</run_depend>
+  <run_depend>riptide_controls</run_depend>
   <run_depend>riptide_serial</run_depend>
   <run_depend>riptide_teleop</run_depend>
   <run_depend>riptide_vision</run_depend>
