--- a/riptide/CMakeLists.txt
+++ b/riptide/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(riptide_robot)
+project(riptide)
 find_package(catkin REQUIRED)
 catkin_metapackage()
