--- a/riptide/package.xml
+++ b/riptide/package.xml
@@ -19,7 +19,7 @@
   <run_depend>riptide_estimation</run_depend>
   <run_depend>riptide_description</run_depend>
   <run_depend>riptide_gazebo</run_depend>
-  <run_depend>riptide_launch</run_depend>
+  <run_depend>riptide_bringup</run_depend>
   <run_depend>riptide_msgs</run_depend>
   <run_depend>riptide_controls</run_depend>
   <run_depend>riptide_serial</run_depend>
