--- a/riptide_bringup/CMakeLists.txt
+++ b/riptide_bringup/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(riptide_launch)
+project(riptide_bringup)
 
 find_package(catkin REQUIRED COMPONENTS roslaunch)
 
