Pull hardware and rviz out

--- a/riptide_msgs/CMakeLists.txt
+++ b/riptide_msgs/CMakeLists.txt
@@ -3,7 +3,7 @@ project(riptide_msgs)
 
 find_package(catkin REQUIRED COMPONENTS message_generation std_msgs geometry_msgs actionlib_msgs)
 
-add_message_files(FILES Depth.msg Thrust.msg ThrustStamped.msg Pwm.msg PwmStamped.msg Esc.msg Thrusters.msg Bat.msg BatStamped.msg OdomWithAccel.msg)
+add_message_files(FILES Depth.msg Thrust.msg ThrustStamped.msg Pwm.msg PwmStamped.msg Esc.msg Thrusters.msg Bat.msg BatStamped.msg)
 
 generate_messages(DEPENDENCIES std_msgs geometry_msgs actionlib_msgs)
 
