--- a/riptide_estimation/package.xml
+++ b/riptide_estimation/package.xml
@@ -15,6 +15,7 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend>roscpp</build_depend>
   <build_depend>robot_localization</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>tf</build_depend>
