--- a/riptide_gazebo/CMakeLists.txt
+++ b/riptide_gazebo/CMakeLists.txt
@@ -1,9 +1,11 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(riptide_gazebo)
 
-find_package(catkin REQUIRED COMPONENTS riptide_msgs)
+find_package(catkin REQUIRED COMPONENTS roslint riptide_msgs)
 find_package(gazebo REQUIRED)
 find_package(Boost REQUIRED COMPONENTS thread)
+
+roslint_cpp()
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GAZEBO_CXX_FLAGS}")
 
