--- a/riptide_gazebo/package.xml
+++ b/riptide_gazebo/package.xml
@@ -16,6 +16,7 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>roscpp</build_depend>
+  <build_depend>roslint</build_depend>
   <!-- <build_depend>gazebo_ros</build_depend> -->
 
   <run_depend>roscpp</run_depend>
