Lint riptide_hardware

--- a/riptide_hardware/CMakeLists.txt
+++ b/riptide_hardware/CMakeLists.txt
@@ -5,6 +5,8 @@ find_package(catkin REQUIRED COMPONENTS roscpp riptide_msgs)
 
 catkin_package()
 
+roslint_cpp()
+
 include_directories(${catkin_INCLUDE_DIRS})
 
 add_executable(thrust_cal src/thrust_cal.cpp)
