--- a/riptide_hardware/package.xml
+++ b/riptide_hardware/package.xml
@@ -19,6 +19,7 @@
   <build_depend>rosserial_python</build_depend>
   <build_depend>rosserial_arduino</build_depend>
   <build_depend>riptide_msgs</build_depend>
+  <build_depend>roslint</build_depend>
 
   <run_depend>rosserial_python</run_depend>
   <run_depend>rosserial_arduino</run_depend>
