--- a/riptide_vision/package.xml
+++ b/riptide_vision/package.xml
@@ -18,6 +18,7 @@
   <build_depend>camera_calibration</build_depend>
   <build_depend>cv_bridge</build_depend>
   <build_depend>pointgrey_camera_driver</build_depend>
+  <build_depend>roslint</build_depend>
 
   <run_depend>camera_calibration</run_depend>
   <run_depend>cv_bridge</run_depend>
