--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ branches:
     - master
 
 before_install:
+  - git submodule update --init --recursive
   - ./underwater-ros/workspace-prep
 
 install:
