--- a/riptide_estimation/CMakeLists.txt
+++ b/riptide_estimation/CMakeLists.txt
@@ -3,9 +3,9 @@ project(riptide_estimation)
 
 find_package(catkin REQUIRED COMPONENTS roscpp tf sensor_msgs geometry_msgs)
 
-catkin_package()
+catkin_package(INCLUDE_DIRS include)
 
-include_directories(${catkin_INCLUDE_DIRS})
+include_directories(include ${catkin_INCLUDE_DIRS} ${CERES_INCLUDE_DIRS})
 
 add_executable(rpy src/rpy.cpp)
 target_link_libraries(rpy ${catkin_LIBRARIES})
